lint + update math src

--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
-* { margin: 0; padding:0; }
+* {
+  margin: 0;
+  padding: 0;
+}
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
 .center {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%); /* for IE 9 */
-    -webkit-transform: translate(-50%, -50%); /* for Safari */
-  }
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); /* for IE 9 */
+  -webkit-transform: translate(-50%, -50%); /* for Safari */
+}
 
 .center-x {
   position: absolute;
